chore(intl): update translations

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
+  "COUNT": "Count",
   "CREATE": "Yarat",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Musiqi əlavə etmək üçün bir oynatma sırası yarat",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Musiqi",
   "TRANSFERS": "Transferlər",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "SƏSSİZDƏN ÇIXAR",
   "UPDATE_AVAILABLE": "Update available: VERSION",
