--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copier le lien",
+  "COUNT": "Count",
   "CREATE": "Créer",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Créer une nouvelle playlist pour y ajouter votre musique",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Réactiver le son",
   "UPDATE_AVAILABLE": "Mise à jour disponible : VERSION",
