--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
+  "COUNT": "Count",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "ट्रांसफर्स",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
