--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Salin link",
+  "COUNT": "Count",
   "CREATE": "Buat",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "daftar putar baru untuk menambahkan musik anda",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Trek",
   "TRANSFERS": "Transfer",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Hidupkan suara",
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
