--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "コントロールパネル",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "リンクをコピー",
+  "COUNT": "Count",
   "CREATE": "作成",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "新しいプレイリストを作成して音楽を追加します",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "トラック番号",
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "ハイライトされていない歌詞のサイズ",
   "UNMUTE": "ミュート解除",
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
