--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Painel de Controle",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copiar link",
+  "COUNT": "Count",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova playlist para adicionar sua música",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Número de Faixa",
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
