--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Панель управления",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Копировать ссылку",
+  "COUNT": "Count",
   "CREATE": "Создать",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Создайте новый плейлист, чтобы сортировать музыку",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Номер трека",
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "Передачи",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Размер неподсвеченых строк",
   "UNMUTE": "Включить звук",
   "UPDATE_AVAILABLE": "Доступно обновление: VERSION",
