--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
+  "COUNT": "Count",
   "CREATE": "Oluştur",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Müzik eklemek için bir oynatma listesi oluştur",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Müzik",
   "TRANSFERS": "Transferler",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
