--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "复制链接",
+  "COUNT": "Count",
   "CREATE": "创建",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "创建新的播放列表以添加您的歌曲",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "关闭静音",
   "UPDATE_AVAILABLE": "可用更新：VERSION",
