--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -54,6 +54,7 @@
   "CONTROL_PANEL": "Control Panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
+  "COUNT": "Count",
   "CREATE": "Ustvari",
   "CREATE_NEW_PLAYLIST": "Create new playlist",
   "CREATE_PLAYLIST_SUBHEADER": "Ustvari nov seznam predvajanja, da lahko dodaš svojo glasbo",
@@ -252,6 +253,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
+  "TYPE": "Type",
   "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Posodobitev na voljo: VERSION",
