--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -51,7 +51,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Delete",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Coming Up",
-  "CONTROL_PANEL": "Control Panel",
+  "CONTROL_PANEL": "Control panel",
   "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "COUNT": "Count",
@@ -89,7 +89,7 @@
   "FOLDERS_NOT_FOUND": "Few of the folders from your library could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
-  "GENRE": "Genre",
+  "GENRE": "Genres",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE": "Hide",
   "HIDE_LYRICS": "Hide lyrics",
