--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -89,7 +89,7 @@
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
-  "GENRE": "Genre",
+  "GENRE": "Genres",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "HIDE": "Hide",
   "HIDE_LYRICS": "Hide lyrics",
