chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Entfernen",
   "REMOVE_FROM_PLAYLIST": "aus Playlist entfernen",
+  "RENAME": "Rename",
   "REPEAT": "Wiederholung",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
