--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
+  "RENAME": "Rename",
   "REPEAT": "تکرار",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
