--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Retirer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
+  "RENAME": "Rename",
   "REPEAT": "Répéter",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
