--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Hapus",
   "REMOVE_FROM_PLAYLIST": "Hapus dari daftar putar",
+  "RENAME": "Rename",
   "REPEAT": "Ulangi",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
