--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "次回に通知する",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
+  "RENAME": "Rename",
   "REPEAT": "リピート",
   "RESET_PITCH": "ピッチをリセット",
   "RESET_SPEED": "速度をリセット",
