--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
+  "RENAME": "Rename",
   "REPEAT": "Repetir",
   "RESET_PITCH": "Redefinir tom",
   "RESET_SPEED": "Redefinir velocidade",
