--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Напомнить в следующий раз",
   "REMOVE": "Удалить",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
+  "RENAME": "Rename",
   "REPEAT": "Повторять",
   "RESET_PITCH": "Восстановить высоту звука",
   "RESET_SPEED": "Восстановить скорость",
