--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
+  "RENAME": "Rename",
   "REPEAT": "重复",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
