--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma sırasından sil",
+  "RENAME": "Rename",
   "REPEAT": "Təkrar et",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
