--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "RENAME": "Rename",
   "REPEAT": "Repeat",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
