--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
+  "RENAME": "Rename",
   "REPEAT": "Ponavljaj",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
