--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -176,6 +176,7 @@
   "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
+  "RENAME": "Rename",
   "REPEAT": "Tekrar",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
